tests/snapshots/test_glob__identity_glob_example/test_data/example copy.txt.snap
---
source: tests/test_glob.rs
expression: "std::convert::identity"
---
This is an example test input file.
The point of glob tests is to discover multiple files.

