tests/snapshots/test_glob__identity_glob_example/test_data/example.txt.snap
---
source: tests/test_glob.rs
expression: "std::convert::identity"
---
This is an example test input file.
This test just outputs the file unchanged.

